Footer section finished. Last thing will be to fix the subheader section as it is not centered right now.

--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,11 @@ header button {
     border: 2px solid #E5E7Eb;
     
 }
+
+footer {
+    background-color: #1F2937;
+    color: #f9faf8;
+    text-align: center;
+    padding: 24px;
+    margin-top: auto;
+}
